[package]
name = "cch23-bechma"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

shuttle-axum = { version = "0.35.1", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.1"

tokio = "1"
tracing = "0.1.40"
serde = "1.0"
serde_json = "1.0"

# day 7
base64 = "*"

# day 8
rustemon = "*"

# day 11
image = "0.24.7"

# day 12
ulid = "1.1.0"
uuid = "1.6.1"
chrono = "0.4.31"

# day 13
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }

# day 14
minijinja = "1.0.10"

# day 15
unic-emoji-char = "0.9.0"
sha256 = "1.4.0"

[dev-dependencies]
axum-test = "*"
tracing-subscriber = "0.3.18"
